@startuml

title __LAB4_MKV's Class Diagram__\n


      class com.example.lab4_mkv.HelloApplication {
          {static} + main()
          + start()
      }

  


      class com.example.lab4_mkv.HelloController {
          + field : TextField
          + i : int
          + imageView : ImageView
          + timeline : Timeline
          - welcomeText : Label
          + back()
          + forward()
          + initialize()
          + pause()
          + settime()
          + start()
          + stop()
          # onHelloButtonClick()
}

  com.example.lab4_mkv.HelloApplication -up-|> javafx.application.Application
  com.example.lab4_mkv.HelloController .up.|> javafx.fxml.Initializable
  com.example.lab4_mkv.HelloController o-- com.example.lab4_mkv.model.ImageCollection : imgs
  com.example.lab4_mkv.HelloController o-- com.example.lab4_mkv.model.IIterator : iter_main


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
